3_compiler/src/c_parser.output
Nonterminals useless in grammar

   unary_operator


Terminals unused in grammar

   SIZEOF
   TYPEDEF
   EXTERN
   STATIC
   AUTO
   REGISTER
   CONST
   VOLATILE
   STRUCT
   UNION
   ENUM
   ELLIPSIS
   '~'
   '!'


Rules useless in grammar

  134 unary_operator: '&'
  135               | '*'
  136               | '+'
  137               | '-'
  138               | '~'
  139               | '!'


State 21 conflicts: 11 shift/reduce
State 37 conflicts: 11 shift/reduce
State 218 conflicts: 1 shift/reduce


Grammar

    0 $accept: ROOT $end

    1 ROOT: this_unit

    2 primary_expression: IDENTIFIER
    3                   | CONSTANT
    4                   | STRING_LITERAL
    5                   | '(' expression ')'

    6 postfix_expression: primary_expression
    7                   | postfix_expression '(' ')'
    8                   | postfix_expression '.' IDENTIFIER
    9                   | postfix_expression PTR_OP IDENTIFIER
   10                   | postfix_expression INC_OP
   11                   | postfix_expression DEC_OP

   12 unary_expression: postfix_expression
   13                 | INC_OP unary_expression
   14                 | DEC_OP unary_expression

   15 multiplicative_expression: unary_expression
   16                          | multiplicative_expression '*' unary_expression
   17                          | multiplicative_expression '/' unary_expression
   18                          | multiplicative_expression '%' unary_expression

   19 additive_expression: multiplicative_expression
   20                    | additive_expression '+' multiplicative_expression
   21                    | additive_expression '-' multiplicative_expression

   22 shift_expression: additive_expression
   23                 | shift_expression LEFT_OP additive_expression
   24                 | shift_expression RIGHT_OP additive_expression

   25 relational_expression: shift_expression
   26                      | relational_expression '<' shift_expression
   27                      | relational_expression '>' shift_expression
   28                      | relational_expression LE_OP shift_expression
   29                      | relational_expression GE_OP shift_expression

   30 equality_expression: relational_expression
   31                    | equality_expression EQ_OP relational_expression
   32                    | equality_expression NE_OP relational_expression

   33 and_expression: equality_expression
   34               | and_expression '&' equality_expression

   35 eor_expression: and_expression
   36               | eor_expression '^' and_expression

   37 or_expression: eor_expression
   38              | or_expression '|' eor_expression

   39 logical_and_expression: or_expression
   40                       | logical_and_expression AND_OP or_expression

   41 logical_or_expression: logical_and_expression
   42                      | logical_or_expression OR_OP logical_and_expression

   43 conditional_expression: logical_or_expression
   44                       | logical_or_expression '?' expression ':' conditional_expression

   45 assignment_expression: conditional_expression
   46                      | unary_expression assignment_operator assignment_expression

   47 assignment_operator: ASSIGN
   48                    | MUL_ASSIGN
   49                    | DIV_ASSIGN
   50                    | MOD_ASSIGN
   51                    | ADD_ASSIGN
   52                    | SUB_ASSIGN
   53                    | LEFT_ASSIGN
   54                    | RIGHT_ASSIGN
   55                    | AND_ASSIGN
   56                    | OR_ASSIGN
   57                    | XOR_ASSIGN

   58 expression: assignment_expression
   59           | expression ',' assignment_expression

   60 constant_expression: conditional_expression

   61 declaration: declaration_specifiers ';'
   62            | declaration_specifiers init_declarator_list ';'

   63 declaration_specifiers: type_specifier
   64                       | type_specifier declaration_specifiers

   65 init_declarator_list: init_declarator
   66                     | init_declarator ',' init_declarator

   67 init_declarator: declarator
   68                | declarator ASSIGN initializer

   69 type_specifier: VOID
   70               | CHAR
   71               | SHORT
   72               | INT
   73               | LONG
   74               | FLOAT
   75               | DOUBLE
   76               | SIGNED
   77               | UNSIGNED

   78 declarator: direct_declarator

   79 direct_declarator: IDENTIFIER
   80                  | '(' declarator ')'
   81                  | direct_declarator '[' constant_expression ']'
   82                  | direct_declarator '[' ']'
   83                  | direct_declarator '(' identifier_list ')'
   84                  | direct_declarator '(' parameter_list ')'
   85                  | direct_declarator '(' ')'

   86 parameter_list: parameter_declaration
   87               | parameter_list ',' parameter_declaration

   88 parameter_declaration: declaration_specifiers declarator
   89                      | declaration_specifiers

   90 identifier_list: IDENTIFIER
   91                | identifier_list ',' IDENTIFIER

   92 initializer: assignment_expression

   93 statement: labeled_statement
   94          | compound_statement
   95          | expression_statement
   96          | selection_statement
   97          | iteration_statement
   98          | jump_statement

   99 labeled_statement: IDENTIFIER ':' statement
  100                  | CASE constant_expression ':' statement
  101                  | DEFAULT ':' statement

  102 compound_statement: '{' '}'
  103                   | '{' statement_list '}'
  104                   | '{' declaration_list '}'
  105                   | '{' declaration_list statement_list '}'

  106 declaration_list: declaration
  107                 | declaration_list declaration

  108 statement_list: statement
  109               | statement_list statement

  110 expression_statement: ';'
  111                     | expression ';'

  112 selection_statement: IF '(' expression ')' statement
  113                    | IF '(' expression ')' statement ELSE statement
  114                    | SWITCH '(' expression ')' statement

  115 iteration_statement: WHILE '(' expression ')' statement
  116                    | DO statement WHILE '(' expression ')' ';'
  117                    | FOR '(' expression_statement expression_statement ')' statement
  118                    | FOR '(' expression_statement expression_statement expression ')' statement

  119 jump_statement: GOTO IDENTIFIER ';'
  120               | CONTINUE ';'
  121               | BREAK ';'
  122               | RETURN ';'
  123               | RETURN expression ';'

  124 this_unit: external_declaration
  125          | this_unit external_declaration

  126 external_declaration: function_definition_list
  127                     | declaration_list function_definition_list

  128 function_definition_list: function_definition
  129                         | function_definition_list function_definition

  130 function_definition: declaration_specifiers declarator declaration_list compound_statement
  131                    | declaration_specifiers declarator compound_statement
  132                    | declarator declaration_list compound_statement
  133                    | declarator compound_statement


Terminals, with rules where they appear

$end (0) 0
'!' (33)
'%' (37) 18
'&' (38) 34
'(' (40) 5 7 80 83 84 85 112 113 114 115 116 117 118
')' (41) 5 7 80 83 84 85 112 113 114 115 116 117 118
'*' (42) 16
'+' (43) 20
',' (44) 59 66 87 91
'-' (45) 21
'.' (46) 8
'/' (47) 17
':' (58) 44 99 100 101
';' (59) 61 62 110 111 116 119 120 121 122 123
'<' (60) 26
'>' (62) 27
'?' (63) 44
'[' (91) 81 82
']' (93) 81 82
'^' (94) 36
'{' (123) 102 103 104 105
'|' (124) 38
'}' (125) 102 103 104 105
'~' (126)
error (256)
IDENTIFIER (258) 2 8 9 79 90 91 99 119
CONSTANT (259) 3
STRING_LITERAL (260) 4
SIZEOF (261)
PTR_OP (262) 9
INC_OP (263) 10 13
DEC_OP (264) 11 14
LEFT_OP (265) 23
RIGHT_OP (266) 24
LE_OP (267) 28
GE_OP (268) 29
EQ_OP (269) 31
NE_OP (270) 32
AND_OP (271) 40
OR_OP (272) 42
MUL_ASSIGN (273) 48
DIV_ASSIGN (274) 49
MOD_ASSIGN (275) 50
ADD_ASSIGN (276) 51
SUB_ASSIGN (277) 52
LEFT_ASSIGN (278) 53
RIGHT_ASSIGN (279) 54
AND_ASSIGN (280) 55
XOR_ASSIGN (281) 57
OR_ASSIGN (282) 56
ASSIGN (283) 47 68
TYPEDEF (284)
EXTERN (285)
STATIC (286)
AUTO (287)
REGISTER (288)
CHAR (289) 70
SHORT (290) 71
INT (291) 72
LONG (292) 73
SIGNED (293) 76
UNSIGNED (294) 77
FLOAT (295) 74
DOUBLE (296) 75
CONST (297)
VOLATILE (298)
VOID (299) 69
STRUCT (300)
UNION (301)
ENUM (302)
ELLIPSIS (303)
CASE (304) 100
DEFAULT (305) 101
IF (306) 112 113
ELSE (307) 113
SWITCH (308) 114
WHILE (309) 115 116
DO (310) 116
FOR (311) 117 118
GOTO (312) 119
CONTINUE (313) 120
BREAK (314) 121
RETURN (315) 122 123


Nonterminals, with rules where they appear

$accept (84)
    on left: 0
ROOT (85)
    on left: 1, on right: 0
primary_expression (86)
    on left: 2 3 4 5, on right: 6
postfix_expression (87)
    on left: 6 7 8 9 10 11, on right: 7 8 9 10 11 12
unary_expression (88)
    on left: 12 13 14, on right: 13 14 15 16 17 18 46
multiplicative_expression (89)
    on left: 15 16 17 18, on right: 16 17 18 19 20 21
additive_expression (90)
    on left: 19 20 21, on right: 20 21 22 23 24
shift_expression (91)
    on left: 22 23 24, on right: 23 24 25 26 27 28 29
relational_expression (92)
    on left: 25 26 27 28 29, on right: 26 27 28 29 30 31 32
equality_expression (93)
    on left: 30 31 32, on right: 31 32 33 34
and_expression (94)
    on left: 33 34, on right: 34 35 36
eor_expression (95)
    on left: 35 36, on right: 36 37 38
or_expression (96)
    on left: 37 38, on right: 38 39 40
logical_and_expression (97)
    on left: 39 40, on right: 40 41 42
logical_or_expression (98)
    on left: 41 42, on right: 42 43 44
conditional_expression (99)
    on left: 43 44, on right: 44 45 60
assignment_expression (100)
    on left: 45 46, on right: 46 58 59 92
assignment_operator (101)
    on left: 47 48 49 50 51 52 53 54 55 56 57, on right: 46
expression (102)
    on left: 58 59, on right: 5 44 59 111 112 113 114 115 116 118 123
constant_expression (103)
    on left: 60, on right: 81 100
declaration (104)
    on left: 61 62, on right: 106 107
declaration_specifiers (105)
    on left: 63 64, on right: 61 62 64 88 89 130 131
init_declarator_list (106)
    on left: 65 66, on right: 62
init_declarator (107)
    on left: 67 68, on right: 65 66
type_specifier (108)
    on left: 69 70 71 72 73 74 75 76 77, on right: 63 64
declarator (109)
    on left: 78, on right: 67 68 80 88 130 131 132 133
direct_declarator (110)
    on left: 79 80 81 82 83 84 85, on right: 78 81 82 83 84 85
parameter_list (111)
    on left: 86 87, on right: 84 87
parameter_declaration (112)
    on left: 88 89, on right: 86 87
identifier_list (113)
    on left: 90 91, on right: 83 91
initializer (114)
    on left: 92, on right: 68
statement (115)
    on left: 93 94 95 96 97 98, on right: 99 100 101 108 109 112 113
    114 115 116 117 118
labeled_statement (116)
    on left: 99 100 101, on right: 93
compound_statement (117)
    on left: 102 103 104 105, on right: 94 130 131 132 133
declaration_list (118)
    on left: 106 107, on right: 104 105 107 127 130 132
statement_list (119)
    on left: 108 109, on right: 103 105 109
expression_statement (120)
    on left: 110 111, on right: 95 117 118
selection_statement (121)
    on left: 112 113 114, on right: 96
iteration_statement (122)
    on left: 115 116 117 118, on right: 97
jump_statement (123)
    on left: 119 120 121 122 123, on right: 98
this_unit (124)
    on left: 124 125, on right: 1 125
external_declaration (125)
    on left: 126 127, on right: 124 125
function_definition_list (126)
    on left: 128 129, on right: 126 127 129
function_definition (127)
    on left: 130 131 132 133, on right: 128 129


State 0

    0 $accept: . ROOT $end

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    '('         shift, and go to state 11

    ROOT                      go to state 12
    declaration               go to state 13
    declaration_specifiers    go to state 14
    type_specifier            go to state 15
    declarator                go to state 16
    direct_declarator         go to state 17
    declaration_list          go to state 18
    this_unit                 go to state 19
    external_declaration      go to state 20
    function_definition_list  go to state 21
    function_definition       go to state 22


State 1

   79 direct_declarator: IDENTIFIER .

    $default  reduce using rule 79 (direct_declarator)


State 2

   70 type_specifier: CHAR .

    $default  reduce using rule 70 (type_specifier)


State 3

   71 type_specifier: SHORT .

    $default  reduce using rule 71 (type_specifier)


State 4

   72 type_specifier: INT .

    $default  reduce using rule 72 (type_specifier)


State 5

   73 type_specifier: LONG .

    $default  reduce using rule 73 (type_specifier)


State 6

   76 type_specifier: SIGNED .

    $default  reduce using rule 76 (type_specifier)


State 7

   77 type_specifier: UNSIGNED .

    $default  reduce using rule 77 (type_specifier)


State 8

   74 type_specifier: FLOAT .

    $default  reduce using rule 74 (type_specifier)


State 9

   75 type_specifier: DOUBLE .

    $default  reduce using rule 75 (type_specifier)


State 10

   69 type_specifier: VOID .

    $default  reduce using rule 69 (type_specifier)


State 11

   80 direct_declarator: '(' . declarator ')'

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 11

    declarator         go to state 23
    direct_declarator  go to state 17


State 12

    0 $accept: ROOT . $end

    $end  shift, and go to state 24


State 13

  106 declaration_list: declaration .

    $default  reduce using rule 106 (declaration_list)


State 14

   61 declaration: declaration_specifiers . ';'
   62            | declaration_specifiers . init_declarator_list ';'
  130 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  131                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    ';'         shift, and go to state 25
    '('         shift, and go to state 11

    init_declarator_list  go to state 26
    init_declarator       go to state 27
    declarator            go to state 28
    direct_declarator     go to state 17


State 15

   63 declaration_specifiers: type_specifier .
   64                       | type_specifier . declaration_specifiers

    CHAR      shift, and go to state 2
    SHORT     shift, and go to state 3
    INT       shift, and go to state 4
    LONG      shift, and go to state 5
    SIGNED    shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    VOID      shift, and go to state 10

    $default  reduce using rule 63 (declaration_specifiers)

    declaration_specifiers  go to state 29
    type_specifier          go to state 15


State 16

  132 function_definition: declarator . declaration_list compound_statement
  133                    | declarator . compound_statement

    CHAR      shift, and go to state 2
    SHORT     shift, and go to state 3
    INT       shift, and go to state 4
    LONG      shift, and go to state 5
    SIGNED    shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    VOID      shift, and go to state 10
    '{'       shift, and go to state 30

    declaration             go to state 13
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    compound_statement      go to state 32
    declaration_list        go to state 33


State 17

   78 declarator: direct_declarator .
   81 direct_declarator: direct_declarator . '[' constant_expression ']'
   82                  | direct_declarator . '[' ']'
   83                  | direct_declarator . '(' identifier_list ')'
   84                  | direct_declarator . '(' parameter_list ')'
   85                  | direct_declarator . '(' ')'

    '('  shift, and go to state 34
    '['  shift, and go to state 35

    $default  reduce using rule 78 (declarator)


State 18

  107 declaration_list: declaration_list . declaration
  127 external_declaration: declaration_list . function_definition_list

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    '('         shift, and go to state 11

    declaration               go to state 36
    declaration_specifiers    go to state 14
    type_specifier            go to state 15
    declarator                go to state 16
    direct_declarator         go to state 17
    function_definition_list  go to state 37
    function_definition       go to state 22


State 19

    1 ROOT: this_unit .
  125 this_unit: this_unit . external_declaration

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    '('         shift, and go to state 11

    $default  reduce using rule 1 (ROOT)

    declaration               go to state 13
    declaration_specifiers    go to state 14
    type_specifier            go to state 15
    declarator                go to state 16
    direct_declarator         go to state 17
    declaration_list          go to state 18
    external_declaration      go to state 38
    function_definition_list  go to state 21
    function_definition       go to state 22


State 20

  124 this_unit: external_declaration .

    $default  reduce using rule 124 (this_unit)


State 21

  126 external_declaration: function_definition_list .
  129 function_definition_list: function_definition_list . function_definition

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    '('         shift, and go to state 11

    IDENTIFIER  [reduce using rule 126 (external_declaration)]
    CHAR        [reduce using rule 126 (external_declaration)]
    SHORT       [reduce using rule 126 (external_declaration)]
    INT         [reduce using rule 126 (external_declaration)]
    LONG        [reduce using rule 126 (external_declaration)]
    SIGNED      [reduce using rule 126 (external_declaration)]
    UNSIGNED    [reduce using rule 126 (external_declaration)]
    FLOAT       [reduce using rule 126 (external_declaration)]
    DOUBLE      [reduce using rule 126 (external_declaration)]
    VOID        [reduce using rule 126 (external_declaration)]
    '('         [reduce using rule 126 (external_declaration)]
    $default    reduce using rule 126 (external_declaration)

    declaration_specifiers  go to state 39
    type_specifier          go to state 15
    declarator              go to state 16
    direct_declarator       go to state 17
    function_definition     go to state 40


State 22

  128 function_definition_list: function_definition .

    $default  reduce using rule 128 (function_definition_list)


State 23

   80 direct_declarator: '(' declarator . ')'

    ')'  shift, and go to state 41


State 24

    0 $accept: ROOT $end .

    $default  accept


State 25

   61 declaration: declaration_specifiers ';' .

    $default  reduce using rule 61 (declaration)


State 26

   62 declaration: declaration_specifiers init_declarator_list . ';'

    ';'  shift, and go to state 42


State 27

   65 init_declarator_list: init_declarator .
   66                     | init_declarator . ',' init_declarator

    ','  shift, and go to state 43

    $default  reduce using rule 65 (init_declarator_list)


State 28

   67 init_declarator: declarator .
   68                | declarator . ASSIGN initializer
  130 function_definition: declaration_specifiers declarator . declaration_list compound_statement
  131                    | declaration_specifiers declarator . compound_statement

    ASSIGN    shift, and go to state 44
    CHAR      shift, and go to state 2
    SHORT     shift, and go to state 3
    INT       shift, and go to state 4
    LONG      shift, and go to state 5
    SIGNED    shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    VOID      shift, and go to state 10
    '{'       shift, and go to state 30

    $default  reduce using rule 67 (init_declarator)

    declaration             go to state 13
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    compound_statement      go to state 45
    declaration_list        go to state 46


State 29

   64 declaration_specifiers: type_specifier declaration_specifiers .

    $default  reduce using rule 64 (declaration_specifiers)


State 30

  102 compound_statement: '{' . '}'
  103                   | '{' . statement_list '}'
  104                   | '{' . declaration_list '}'
  105                   | '{' . declaration_list statement_list '}'

    IDENTIFIER      shift, and go to state 47
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    CHAR            shift, and go to state 2
    SHORT           shift, and go to state 3
    INT             shift, and go to state 4
    LONG            shift, and go to state 5
    SIGNED          shift, and go to state 6
    UNSIGNED        shift, and go to state 7
    FLOAT           shift, and go to state 8
    DOUBLE          shift, and go to state 9
    VOID            shift, and go to state 10
    CASE            shift, and go to state 52
    DEFAULT         shift, and go to state 53
    IF              shift, and go to state 54
    SWITCH          shift, and go to state 55
    WHILE           shift, and go to state 56
    DO              shift, and go to state 57
    FOR             shift, and go to state 58
    GOTO            shift, and go to state 59
    CONTINUE        shift, and go to state 60
    BREAK           shift, and go to state 61
    RETURN          shift, and go to state 62
    ';'             shift, and go to state 63
    '{'             shift, and go to state 30
    '}'             shift, and go to state 64
    '('             shift, and go to state 65

    primary_expression         go to state 66
    postfix_expression         go to state 67
    unary_expression           go to state 68
    multiplicative_expression  go to state 69
    additive_expression        go to state 70
    shift_expression           go to state 71
    relational_expression      go to state 72
    equality_expression        go to state 73
    and_expression             go to state 74
    eor_expression             go to state 75
    or_expression              go to state 76
    logical_and_expression     go to state 77
    logical_or_expression      go to state 78
    conditional_expression     go to state 79
    assignment_expression      go to state 80
    expression                 go to state 81
    declaration                go to state 13
    declaration_specifiers     go to state 31
    type_specifier             go to state 15
    statement                  go to state 82
    labeled_statement          go to state 83
    compound_statement         go to state 84
    declaration_list           go to state 85
    statement_list             go to state 86
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    jump_statement             go to state 90


State 31

   61 declaration: declaration_specifiers . ';'
   62            | declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 1
    ';'         shift, and go to state 25
    '('         shift, and go to state 11

    init_declarator_list  go to state 26
    init_declarator       go to state 27
    declarator            go to state 91
    direct_declarator     go to state 17


State 32

  133 function_definition: declarator compound_statement .

    $default  reduce using rule 133 (function_definition)


State 33

  107 declaration_list: declaration_list . declaration
  132 function_definition: declarator declaration_list . compound_statement

    CHAR      shift, and go to state 2
    SHORT     shift, and go to state 3
    INT       shift, and go to state 4
    LONG      shift, and go to state 5
    SIGNED    shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    VOID      shift, and go to state 10
    '{'       shift, and go to state 30

    declaration             go to state 36
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    compound_statement      go to state 92


State 34

   83 direct_declarator: direct_declarator '(' . identifier_list ')'
   84                  | direct_declarator '(' . parameter_list ')'
   85                  | direct_declarator '(' . ')'

    IDENTIFIER  shift, and go to state 93
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    ')'         shift, and go to state 94

    declaration_specifiers  go to state 95
    type_specifier          go to state 15
    parameter_list          go to state 96
    parameter_declaration   go to state 97
    identifier_list         go to state 98


State 35

   81 direct_declarator: direct_declarator '[' . constant_expression ']'
   82                  | direct_declarator '[' . ']'

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '('             shift, and go to state 65
    ']'             shift, and go to state 100

    primary_expression         go to state 66
    postfix_expression         go to state 67
    unary_expression           go to state 101
    multiplicative_expression  go to state 69
    additive_expression        go to state 70
    shift_expression           go to state 71
    relational_expression      go to state 72
    equality_expression        go to state 73
    and_expression             go to state 74
    eor_expression             go to state 75
    or_expression              go to state 76
    logical_and_expression     go to state 77
    logical_or_expression      go to state 78
    conditional_expression     go to state 102
    constant_expression        go to state 103


State 36

  107 declaration_list: declaration_list declaration .

    $default  reduce using rule 107 (declaration_list)


State 37

  127 external_declaration: declaration_list function_definition_list .
  129 function_definition_list: function_definition_list . function_definition

    IDENTIFIER  shift, and go to state 1
    CHAR        shift, and go to state 2
    SHORT       shift, and go to state 3
    INT         shift, and go to state 4
    LONG        shift, and go to state 5
    SIGNED      shift, and go to state 6
    UNSIGNED    shift, and go to state 7
    FLOAT       shift, and go to state 8
    DOUBLE      shift, and go to state 9
    VOID        shift, and go to state 10
    '('         shift, and go to state 11

    IDENTIFIER  [reduce using rule 127 (external_declaration)]
    CHAR        [reduce using rule 127 (external_declaration)]
    SHORT       [reduce using rule 127 (external_declaration)]
    INT         [reduce using rule 127 (external_declaration)]
    LONG        [reduce using rule 127 (external_declaration)]
    SIGNED      [reduce using rule 127 (external_declaration)]
    UNSIGNED    [reduce using rule 127 (external_declaration)]
    FLOAT       [reduce using rule 127 (external_declaration)]
    DOUBLE      [reduce using rule 127 (external_declaration)]
    VOID        [reduce using rule 127 (external_declaration)]
    '('         [reduce using rule 127 (external_declaration)]
    $default    reduce using rule 127 (external_declaration)

    declaration_specifiers  go to state 39
    type_specifier          go to state 15
    declarator              go to state 16
    direct_declarator       go to state 17
    function_definition     go to state 40


State 38

  125 this_unit: this_unit external_declaration .

    $default  reduce using rule 125 (this_unit)


State 39

  130 function_definition: declaration_specifiers . declarator declaration_list compound_statement
  131                    | declaration_specifiers . declarator compound_statement

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 11

    declarator         go to state 104
    direct_declarator  go to state 17


State 40

  129 function_definition_list: function_definition_list function_definition .

    $default  reduce using rule 129 (function_definition_list)


State 41

   80 direct_declarator: '(' declarator ')' .

    $default  reduce using rule 80 (direct_declarator)


State 42

   62 declaration: declaration_specifiers init_declarator_list ';' .

    $default  reduce using rule 62 (declaration)


State 43

   66 init_declarator_list: init_declarator ',' . init_declarator

    IDENTIFIER  shift, and go to state 1
    '('         shift, and go to state 11

    init_declarator    go to state 105
    declarator         go to state 91
    direct_declarator  go to state 17


State 44

   68 init_declarator: declarator ASSIGN . initializer

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '('             shift, and go to state 65

    primary_expression         go to state 66
    postfix_expression         go to state 67
    unary_expression           go to state 68
    multiplicative_expression  go to state 69
    additive_expression        go to state 70
    shift_expression           go to state 71
    relational_expression      go to state 72
    equality_expression        go to state 73
    and_expression             go to state 74
    eor_expression             go to state 75
    or_expression              go to state 76
    logical_and_expression     go to state 77
    logical_or_expression      go to state 78
    conditional_expression     go to state 79
    assignment_expression      go to state 106
    initializer                go to state 107


State 45

  131 function_definition: declaration_specifiers declarator compound_statement .

    $default  reduce using rule 131 (function_definition)


State 46

  107 declaration_list: declaration_list . declaration
  130 function_definition: declaration_specifiers declarator declaration_list . compound_statement

    CHAR      shift, and go to state 2
    SHORT     shift, and go to state 3
    INT       shift, and go to state 4
    LONG      shift, and go to state 5
    SIGNED    shift, and go to state 6
    UNSIGNED  shift, and go to state 7
    FLOAT     shift, and go to state 8
    DOUBLE    shift, and go to state 9
    VOID      shift, and go to state 10
    '{'       shift, and go to state 30

    declaration             go to state 36
    declaration_specifiers  go to state 31
    type_specifier          go to state 15
    compound_statement      go to state 108


State 47

    2 primary_expression: IDENTIFIER .
   99 labeled_statement: IDENTIFIER . ':' statement

    ':'  shift, and go to state 109

    $default  reduce using rule 2 (primary_expression)


State 48

    3 primary_expression: CONSTANT .

    $default  reduce using rule 3 (primary_expression)


State 49

    4 primary_expression: STRING_LITERAL .

    $default  reduce using rule 4 (primary_expression)


State 50

   13 unary_expression: INC_OP . unary_expression

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '('             shift, and go to state 65

    primary_expression  go to state 66
    postfix_expression  go to state 67
    unary_expression    go to state 110


State 51

   14 unary_expression: DEC_OP . unary_expression

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '('             shift, and go to state 65

    primary_expression  go to state 66
    postfix_expression  go to state 67
    unary_expression    go to state 111


State 52

  100 labeled_statement: CASE . constant_expression ':' statement

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    '('             shift, and go to state 65

    primary_expression         go to state 66
    postfix_expression         go to state 67
    unary_expression           go to state 101
    multiplicative_expression  go to state 69
    additive_expression        go to state 70
    shift_expression           go to state 71
    relational_expression      go to state 72
    equality_expression        go to state 73
    and_expression             go to state 74
    eor_expression             go to state 75
    or_expression              go to state 76
    logical_and_expression     go to state 77
    logical_or_expression      go to state 78
    conditional_expression     go to state 102
    constant_expression        go to state 112


State 53

  101 labeled_statement: DEFAULT . ':' statement

    ':'  shift, and go to state 113


State 54

  112 selection_statement: IF . '(' expression ')' statement
  113                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 114


State 55

  114 selection_statement: SWITCH . '(' expression ')' statement

    '('  shift, and go to state 115


State 56

  115 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 116


State 57

  116 iteration_statement: DO . statement WHILE '(' expression ')' ';'

    IDENTIFIER      shift, and go to state 47
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    CASE            shift, and go to state 52
    DEFAULT         shift, and go to state 53
    IF              shift, and go to state 54
    SWITCH          shift, and go to state 55
    WHILE           shift, and go to state 56
    DO              shift, and go to state 57
    FOR             shift, and go to state 58
    GOTO            shift, and go to state 59
    CONTINUE        shift, and go to state 60
    BREAK           shift, and go to state 61
    RETURN          shift, and go to state 62
    ';'             shift, and go to state 63
    '{'             shift, and go to state 30
    '('             shift, and go to state 65

    primary_expression         go to state 66
    postfix_expression         go to state 67
    unary_expression           go to state 68
    multiplicative_expression  go to state 69
    additive_expression        go to state 70
    shift_expression           go to state 71
    relational_expression      go to state 72
    equality_expression        go to state 73
    and_expression             go to state 74
    eor_expression             go to state 75
    or_expression              go to state 76
    logical_and_expression     go to state 77
    logical_or_expression      go to state 78
    conditional_expression     go to state 79
    assignment_expression      go to state 80
    expression                 go to state 81
    statement                  go to state 117
    labeled_statement          go to state 83
    compound_statement         go to state 84
    expression_statement       go to state 87
    selection_statement        go to state 88
    iteration_statement        go to state 89
    jump_statement             go to state 90


State 58

  117 iteration_statement: FOR . '(' expression_statement expression_statement ')' statement
  118                    | FOR . '(' expression_statement expression_statement expression ')' statement

    '('  shift, and go to state 118


State 59

  119 jump_statement: GOTO . IDENTIFIER ';'

    IDENTIFIER  shift, and go to state 119


State 60

  120 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 120


State 61

  121 jump_statement: BREAK . ';'

    ';'  shift, and go to state 121


State 62

  122 jump_statement: RETURN . ';'
  123               | RETURN . expression ';'

    IDENTIFIER      shift, and go to state 99
    CONSTANT        shift, and go to state 48
    STRING_LITERAL  shift, and go to state 49
    INC_OP          shift, and go to state 50
    DEC_OP          shift, and go to state 51
    ';'             shift, and go to state 122
    '('             shift, and go to state 65
